# terminusgps-notifier

./: .buildinfo  .dockerignore  .gitignore  Dockerfile  README.md  app.py  caller.py  errors.py  genindex.html  index.html  main.py  manage.py  objects.inv  package-lock.json  pyproject.toml  request.py  requirements.txt  response.py  search.html  searchindex.js  settings.py  test.py  validators.py
.github/workflows/: django-test.yaml  docker-build.yaml  sphinx-build.yaml
_sources/: index.rst.txt
_sources/guides/: connecting_your_wialon_account.rst.txt  creating_a_live_notification.rst.txt  index.rst.txt  setting_destination_phone_numbers.rst.txt  subscribing.rst.txt
_static/: pygments.css
docker/: Dockerfile.dev  Dockerfile.prod
docs/source/: conf.py
docs/source/guides/: creating_an_account.rst  logging_in.rst
guides/: connecting_your_wialon_account.html  creating_a_live_notification.html  creating_an_account.html  index.html  logging_in.html  setting_destination_phone_numbers.html  subscribing.html
integrations/twilio/: __init__.py  caller.py
models/: __init__.py  requests.py  responses.py
src/: asgi.py  settings.py  urls.py  views.py  wsgi.py
src/docs/source/: conf.py  index.rst  settings.rst  usage.rst
src/settings/: dev.py  prod.py
terminusgps_notifier/: admin.py  apps.py  authorizenet.py  constants.py  decorators.py  dispatchers.py  forms.py  mixins.py  models.py  phones.py  pinpoint.py  services.py  tasks.py  tests.py  tests_v3.py  urls.py  validators.py  views.py  wialon.py
terminusgps_notifier/fixtures/terminusgps_notifier/tests/: test_customer.json  test_profile.json  test_subscription.json  test_user.json
terminusgps_notifier/management/commands/: reset_messages.py
terminusgps_notifier/migrations/: 0001_initial.py  0002_alter_profile_user.py  0002_alter_terminusgpsnotifiercustomer_subscription_and_more.py  0002_alter_wialonnotification_act.py  0002_dispatchlog.py  0002_terminusgpsnotifiercustomer_token.py  0003_alter_terminusgpsnotifiercustomer_tax_rate.py  0003_alter_terminusgpsnotifiercustomer_token.py  0003_remove_dispatchlog_date_format_and_more.py  0003_remove_profile_checkout_id_and_more.py  0004_dispatchlog_method_dispatchlog_phones.py  0004_remove_profile_customer_profile_id.py  0004_remove_terminusgpsnotifiercustomer_token_and_more.py  0004_remove_wialonnotification_resource_delete_wialonunit_and_more.py  0005_delete_wialonnotification.py  0005_dispatchlog_pub_date.py  0005_profile_description_profile_merchant_id_and_more.py  0006_alter_terminusgpsnotifiercustomer_user.py  0007_rename_terminusgpsnotifiercustomer_customer.py  0008_remove_customer_subscription_and_more.py  0009_customer_subscription_expiry.py  0010_remove_customer_subscription_expiry_and_more.py  0011_remove_customer_customer_profile_id_and_more.py  0012_remove_customer_stripe_id_customer_checkout_id.py  0013_profile_delete_customer.py
terminusgps_notifier/static/terminusgps_notifier/css/: input.css  output.css
terminusgps_notifier/templates/terminusgps_notifier/: cancel_subscription.html  checkout.html  checkout_success.html  contact.html  create_notification.html  create_notification_step_one.html  create_notification_step_submit.html  create_notification_step_three.html  create_notifications.html  create_subscription.html  dashboard.html  detail_invoice.html  detail_notification.html  detail_notifications.html  detail_resources.html  detail_subscription.html  home.html  hosted_payment.html  hosted_profile.html  layout.html  list_invoices.html  list_notification.html  list_notifications.html  list_resource.html  list_resources.html  logged_out.html  login.html  message.txt  message_base.txt  message_sms.txt  message_voice.txt  messages_count.html  navbar.html  payment_create.html  payment_details.html  payment_failure.html  payment_form.html  payment_success.html  privacy.html  register.html  (+19 more)
terminusgps_notifier/templates/terminusgps_notifier/create_notification/: step_four.html  step_one.html  step_review.html  step_three.html  step_two.html
terminusgps_notifier/templates/terminusgps_notifier/emails/: layout.html  subscription_created.html
terminusgps_notifier/templates/terminusgps_notifier/forms/: schedule.html  trigger.html  trigger_geozone.html  units.html
terminusgps_notifier/templates/terminusgps_notifier/select/: resources.html  units.html
terminusgps_notifier/templatetags/: date_utils.py  money_utils.py
terminusgps_notifier/views/: __init__.py  dispatch.py  notifications.py  packages.py  wialon.py
tests/: test_authorizenet.py  test_models.py  test_tasks.py  test_views.py  test_wialon.py
wialonapi/: __init__.py  session.py  utils.py
wialonapi/items/: __init__.py  base.py  driver.py  resource.py  unit.py
